force-app/main/default/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of the product</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enchantment_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of all of the enchantment ratings of the enchantments on this product.</description>
        <label>Enchantment Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Magical_Defense_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Appraised magical defense rating of the product</description>
        <label>Magical Defense Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Magical_Offense_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Appraised magical offense rating of the product</description>
        <label>Magical Offense Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Defense_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Appraised physical defense rating of the product</description>
        <label>Physical Defense Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Offense_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Appraised physical offense rating of the product</description>
        <label>Physical Offense Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>The size of the wearable product</description>
        <label>Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Appraised utility rating of the product</description>
        <label>Utility Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>